hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tarray.php.exp
File "tarray.php", line 11, characters 10-14:
Invalid return type (Typing[4110])
File "tarray.php", line 10, characters 19-28:
This is an array (used like a vector)
File "tarray.php", line 4, characters 17-23:
It is incompatible with a dynamic value
File "tarray.php", line 15, characters 10-14:
Invalid return type (Typing[4110])
File "tarray.php", line 14, characters 19-36:
This is an array (used like a hashtable)
File "tarray.php", line 4, characters 17-23:
It is incompatible with a dynamic value
